fix(history): add gap between history header and application header

--- a/applications/web-client/src/app/matchmaking/history/game-history.component.css
+++ b/applications/web-client/src/app/matchmaking/history/game-history.component.css
@@ -1,5 +1,5 @@
 .game-history {
-  margin: 0 auto;
+  margin: 16px auto;
   max-width: 1000px;
 }
 
